created login with google function

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 DB_PORT = 3306
 DB_USER = root
+DB_PASS = fullclip
 DB_NAME = health_step
 
-GOOGLE_CLIENT_ID = 930065574307-uugtfgk20j2nt27q3gm9f8ffk6pv4amp.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+GOOGLE_CLIENT_ID = 930065574307-fn7h3l1rmlep34bglde5i78mi2b5j68j.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
 
 SECRET = WAERZSDXFGCHVJBKHJOIU9089Y7T86R57E46RDF
