--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-DB_PORT = 3306
-DB_USER = root
-DB_PASS = fullclip
-DB_NAME = health_step
+DB_PORT=8080
+DB_USER=root
+DB_PASS=admin2
+DB_NAME=trialerror
+DB_HOST=localhost:3306
 
-GOOGLE_CLIENT_ID = 930065574307-fn7h3l1rmlep34bglde5i78mi2b5j68j.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+GOOGLE_CLIENT_ID=529558767640-pr9jdab7araajheaef98ln3urb0n9abp.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
-SECRET = WAERZSDXFGCHVJBKHJOIU9089Y7T86R57E46RDF
+SECRET=WAERZSDXFGCHVJBKHJOIU9089Y7T86R57E46RDF
